	Only display traces from runtime library when in maintainer mode.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h (nact_iactions_list_brief_tree_dump):
	Briefly dump the tree store content.

	* src/nact/nact-main-menubar.c (nact_main_menubar_runtime_init):
	Display a Maintainer menu when in maintainer mode.
	Add BriefTreeStoreDumpItem new item.
	Display a first toolbar.

	* src/nact/nact-tree-model.c (nact_tree_model_insert):
	Add debug traces.

	* src/nact/nautilus-actions-config-tool.actions:
	Define a placeholder for the Maintainer menu.
	Define a first toolbar.

	* src/nact/nautilus-actions-config-tool.ui:
	Replace the GtkToolbar with a VBox placeholder.

	* src/nact/nautilus-actions-maintainer.actions: New file.

	* src/nact/Makefile.am: Updated accordingly.

	* src/runtime/na-object-profile.c (object_is_valid):
	A profile requires rather a command to be valid that a label.

2009-10-08 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-object-api.h (na_object_remove_item):
	Moved to runtime library.

	* src/common/na-object-item-fn.h:
	* src/common/na-object-item.c (na_object_item_remove_item):
	Moved to runtime library.

	* src/nact/nact-iactions-list.c (do_insert_items):
	Marks the item itself as modified if it has no parent.

	* src/nact/nact-main-menubar.c (on_update_sensitivities):
	Enable Paste a profile if an action is selected.
	Always disable Paste into a profile.

	* src/nact/nact-main-window.c (actually_delete_item):
	Delete childs before removing from pivot.
	(nact_tree_model_insert, nact_tree_model_insert_into):
	Set parent on newly inserted child.

	* src/nact/nact-tree-model.c (fill_tree_store):
	Rewrite duplication code to get reference counts equal to 1 in the store.
	Install parent pointer in childs.

	* src/runtime/na-object-api.h (na_object_remove_item):
	Moved from common library.

	* src/runtime/na-object-id.c (instance_dispose):
	Remove itself from parent if any.

	* src/runtime/na-object-item-fn.h: